# Diagrammer

./: .gitignore  LICENSE  MANIFEST.in  README.md  diagrammer.spec  pyproject.toml
.claude/: settings.json
.github/workflows/: build.yml
docs/: help.md  math-annotations.md  sciapp-kit-plan.md  svg-component-spec.md  tutorial.md
misc/: ARB_TEMPLATE_200pt_SCRATCH.ai  diagrammer2_icon.icns
scripts/: repair_svgs.py
src/diagrammer/: __init__.py  __main__.py  _resources.py  app.py  clipboard_ops.py  defaults.py  defaults.yaml  main_window.py  menu_ops.py  shortcuts.py  transform_ops.py
src/diagrammer/canvas/: grid.py  scene.py  view.py
src/diagrammer/commands/: add_command.py  add_compound_command.py  annotation_command.py  connect_command.py  delete_command.py  group_command.py  layer_command.py  shape_command.py  stretch_command.py  style_command.py  svg_style_command.py  transform_command.py
src/diagrammer/docs/: help.md  svg-component-spec.md
src/diagrammer/examples/: JPA-setup.dgm  README.md
src/diagrammer/io/: compound_export.py  compound_manifest.py  exporter.py  serializer.py  svg_parse.py
src/diagrammer/items/: annotation_item.py  component_item.py  connection_item.py  junction_item.py  port_item.py  shape_item.py  svg_image_item.py
src/diagrammer/models/: component_def.py  library.py  svg_element_info.py  svg_style_override.py
src/diagrammer/panels/: annotations_panel.py  arrow_dialog.py  examples_dialog.py  help_window.py  layers_panel.py  library_panel.py  library_table_view.py  properties_panel.py  settings_dialog.py  shape_dialog.py  shortcut_overlay.py
src/diagrammer/utils/: geometry.py
tests/: _geometry_snapshot.py  conftest.py  test_component_def.py  test_compound_export.py  test_crossovers.py  test_drag_auto_include.py  test_geometry.py  test_serializer.py  test_shortcut_overlay.py  test_stretch_path_coords.py  test_svg_parse.py  test_transform_flip_rotate.py  test_transform_invariants.py  test_undo.py  test_ux_fixes.py  test_wire_arrows.py
tools/: resave_examples.py
