[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "diagrammer"
version = "0.1.0"
description = "A tool for building diagrams, including flowcharts, circuits, and more"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Joe"},
]
dependencies = [
    "PySide6-Essentials>=6.6",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pyinstaller>=6.0",
]
# Pure-Python LaTeX-math-to-SVG renderer used for display math
# (e.g. matrices) in annotations, so users don't need a system LaTeX
# install. Falls back to matplotlib's usetex / mathtext if absent.
math = [
    "ziamath>=0.9",
]

[project.scripts]
diagrammer = "diagrammer.__main__:main"

[project.gui-scripts]
diagrammer-gui = "diagrammer.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
diagrammer = [
    "defaults.yaml",
    "icons/*.png",
    "components/**/*.svg",
    "docs/*.md",
    "fonts/*.otf",
    "fonts/OFL.txt",
]
